snapshots/syntax/library/functions/financial/mirr/mirr_msgbox.snap
---
source: vb6parse/src/syntax/library/functions/financial/mirr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: MsgBox
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: BinaryExpression
                  children:
                    - kind: StringLiteralExpression
                      children:
                        - kind: StringLiteral
                          text: "\"MIRR: \""
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: Identifier
                          text: MIRR
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: cashFlows
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children: []
                                    - kind: RightParenthesis
                                      text: )
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: SingleLiteral
                                      text: "0.08"
                            - kind: Comma
                              text: ","
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: SingleLiteral
                                      text: "0.05"
                        - kind: RightParenthesis
                          text: )
        - kind: Newline
          text: "\n"
